src/blocks/common/lang-menu/lang-menu.scss
/**
 * Styles for the lang menu block.
 */
.lang-menu {
    position: relative;

    &__toggle {
        padding: 12px 18px 24px;

        color: $color-primary;
        @include font-size(20px);

        background: transparent;
        border: 0;
        cursor: pointer;
    }

    &__list {
        bottom: 0;
        position: absolute;
        right: 100%;

        padding: 1px 20px 17px;
        width: 172px;

        background: $color-white;
        border: 1px solid $color-gray;
        opacity: 0;

        transition: opacity 0.25s ease-out,
                    visibility 0s step-start 0.25s;
        visibility: hidden;

        .lang-menu_visible & {
            opacity: 1;

            transition-delay: 0s;
            visibility: visible;
        }

        .lang-menu_align_left & {
            @include breakpoint-up(sm) {
                bottom: auto;
                left: 100%;
                right: auto;
                top: 0;
            }
        }

        .lang-menu_align_bottom & {
            @include breakpoint-up(md) {
                bottom: auto;
                top: 0;
            }

            @include breakpoint-up(lg) {
                right: 0;
                top: 100%;
            }
        }
    }

    &__item {
        margin-top: 5px;
    }

    &__link {
        display: block;
        padding: 12px 0;

        color: $color-text;
        @include font-size(10px);
        text-decoration: none;
        text-transform: uppercase;

        border-bottom: 1px dashed $color-text;

        transition: all 0.25s linear;

        &:hover,
        &:focus,
        &_active {
            color: $color-secondary;

            border-bottom-color: $color-secondary;
        }
    }
}

